Internetgateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.dev.id}" 

  tags = {
    Name = "main"
  }
}
